fix widgets spacing

--- a/css/src/widgets.less
+++ b/css/src/widgets.less
@@ -11,6 +11,7 @@
 	font-size: 13px;
 	line-height: 18px;
 	color: @gray;
+	padding-bottom: 2em;
 	ul, ol{
 		padding-left: 1.5em;
 	}
